AudioCommon: Allow cubeb to be optional On iOS specifically, cubeb support is old and buggy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -706,7 +706,9 @@ endif()
 add_subdirectory(Externals/soundtouch)
 include_directories(Externals/soundtouch)
 
-if (NOT IOS)
+# Cubeb support for iOS is old and broken.
+# See: https://github.com/kinetiknz/cubeb/issues/394
+if(NOT IOS)
   find_package(Cubeb)
   if(CUBEB_FOUND)
     message(STATUS "Using the system cubeb")
@@ -714,7 +716,9 @@ if (NOT IOS)
     check_vendoring_approved(cubeb)
     message(STATUS "Using static cubeb from Externals")
     add_subdirectory(Externals/cubeb EXCLUDE_FROM_ALL)
+    set(CUBEB_FOUND true)
   endif()
+  add_definitions(-DHAVE_CUBEB)
 endif()
 
 if(NOT ANDROID AND NOT IOS)
