--- a/Source/iOS/DolphiniOS/DolphiniOS/Entitlements_JB.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/Entitlements_JB.plist
@@ -8,10 +8,16 @@
 	</array>
 	<key>com.apple.private.security.system-application</key>
 	<true/>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
 	<key>com.apple.security.exception.files.absolute-path.read-write</key>
 	<array>
 		<string>/private/var/mobile/Documents/DolphiniOS/</string>
 		<string>/Library/LaunchDaemons/</string>
+	</array>
+	<key>seatbelt-profiles</key>
+	<array>
+		<string>container</string>
 	</array>
 	<key>get-task-allow</key>
 	<true/>
