iOS: Add NSMotionUsageDescription to Info.plist

--- a/Source/iOS/DolphiniOS/DolphiniOS/Info.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMotionUsageDescription</key>
+	<string>DolphiniOS uses your device&apos;s accelerometer and gyroscope to emulate the Wii Remote&apos;s built-in accelerometer and gyroscope.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDocumentTypes</key>
