iOS: Use custom name and bundle ID per build configuration

--- a/Source/iOS/DolphiniOS/DolphiniOS/Info.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/Info.plist
@@ -58,7 +58,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>${APP_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
