iOS: Correct copy paste error in MFi Wiimote profile

--- a/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiWiimoteProfile.ini
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiWiimoteProfile.ini
@@ -29,7 +29,7 @@ IMUAccelerometer/Backward = `Accel Back`
 IMUAccelerometer/Up = `Accel Up`
 IMUAccelerometer/Down = `Accel Down`
 IMUGyroscope/Pitch Up = `Gyro Pitch Up`
-IMUGyroscope/Pitch Down = `Gyro Pitch Up`
+IMUGyroscope/Pitch Down = `Gyro Pitch Down`
 IMUGyroscope/Roll Left = `Gyro Roll Left`
 IMUGyroscope/Roll Right = `Gyro Roll Right`
 IMUGyroscope/Yaw Left = `Gyro Yaw Left`
