--- a/Binary/x64/User/Config/Dolphin.ini
+++ b/Binary/x64/User/Config/Dolphin.ini
@@ -154,7 +154,7 @@ JitPairedOff = False
 JitSystemRegistersOff = False
 JitBranchOff = False
 [NetPlay]
-TraversalChoice = direct
+TraversalChoice = traversal
 Address = 127.0.0.1
 ChunkedUploadLimit = 0x00000bb8
 ConnectPort = 0x0a42
@@ -166,3 +166,4 @@ IndexRegion =
 Nickname = Player
 UseIndex = False
 UseUPNP = False
+HostCode = 00000000
