MP8 out of box work

--- a/Binary/x64/User/Config/Dolphin.ini
+++ b/Binary/x64/User/Config/Dolphin.ini
@@ -3,7 +3,7 @@ ShowLag = False
 ShowFrameCount = False
 ISOPaths = 0
 RecursiveISOPaths = False
-WirelessMac = 
+WirelessMac = 00:17:ab:dd:23:0f
 UseGameCovers = False
 [Interface]
 ConfirmStop = True
