--- a/Binary/x64/User/Config/WiimoteNew.ini
+++ b/Binary/x64/User/Config/WiimoteNew.ini
@@ -54,6 +54,7 @@ D-Pad/Up = UP
 D-Pad/Down = DOWN
 D-Pad/Left = LEFT
 D-Pad/Right = RIGHT
+Source = 1
 [Wiimote2]
 IR/Center = 0.00 0.00
 Swing/Center = 0.00 0.00
@@ -68,6 +69,7 @@ Drums/Stick/Center = 0.00 0.00
 Turntable/Stick/Center = 0.00 0.00
 uDraw/Stylus/Center = 0.00 0.00
 Drawsome/Stylus/Center = 0.00 0.00
+Source = 0
 [Wiimote3]
 IR/Center = 0.00 0.00
 Swing/Center = 0.00 0.00
@@ -82,6 +84,7 @@ Drums/Stick/Center = 0.00 0.00
 Turntable/Stick/Center = 0.00 0.00
 uDraw/Stylus/Center = 0.00 0.00
 Drawsome/Stylus/Center = 0.00 0.00
+Source = 0
 [Wiimote4]
 IR/Center = 0.00 0.00
 Swing/Center = 0.00 0.00
@@ -96,6 +99,7 @@ Drums/Stick/Center = 0.00 0.00
 Turntable/Stick/Center = 0.00 0.00
 uDraw/Stylus/Center = 0.00 0.00
 Drawsome/Stylus/Center = 0.00 0.00
+Source = 0
 [Wiimote5]
 IR/Center = 0.00 0.00
 Swing/Center = 0.00 0.00
@@ -110,3 +114,5 @@ Drums/Stick/Center = 0.00 0.00
 Turntable/Stick/Center = 0.00 0.00
 uDraw/Stylus/Center = 0.00 0.00
 Drawsome/Stylus/Center = 0.00 0.00
+[BalanceBoard]
+Source = 0
