--- a/Binary/x64/User/Config/Qt.ini
+++ b/Binary/x64/User/Config/Qt.ini
@@ -30,10 +30,10 @@ state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x1\0\0\0\0\0\0\x1\xec\0\0\x2\x6\xf
 geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\xc7\0\0\0!\0\0\x3\xe8\0\0\x2\xa1\0\0\0\xc8\0\0\0=\0\0\x3\xe7\0\0\x2\xa0\0\0\0\0\0\0\0\0\x5\0\0\0\0\xc8\0\0\0=\0\0\x3\xe7\0\0\x2\xa0)"
 
 [renderwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xc9\0\0\0{\0\0\x4J\0\0\x2w\0\0\x1\xca\0\0\0\x97\0\0\x4I\0\0\x2v\0\0\0\0\0\0\0\0\x5\0\0\0\x1\xca\0\0\0\x97\0\0\x4I\0\0\x2v)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x97\0\0\x2\x1\0\0\x4\x18\0\0\x3\xfd\0\0\x1\x98\0\0\x2\x1d\0\0\x4\x17\0\0\x3\xfc\0\0\0\0\0\0\0\0\x5\0\0\0\x1\x98\0\0\x2\x1d\0\0\x4\x17\0\0\x3\xfc)
 
 [tableheader]
-state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\n(\x3\0\0\0\x4\0\0\0\x3\0\0\0\x64\0\0\0\x5\0\0\0\x46\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\x3\xf\0\0\0\n\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0&\0\0\0\x84\0\0\0\0\0\0\0\n\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0\x66\0\0\0\x1\0\0\0\x2\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0U\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\0)
+state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\n(\x3\0\0\0\x4\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\x5\0\0\0\x46\0\0\0\x3\0\0\0\x64\0\0\x3\xf\0\0\0\n\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0&\0\0\0\x84\0\0\0\0\0\0\0\n\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0\x66\0\0\0\x1\0\0\0\x2\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0U\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\0)
 
 [gridview]
 scale=@Variant(\0\0\0\x87?\x80\0\0)
