--- a/Binary/x64/User/Config/Dolphin.ini
+++ b/Binary/x64/User/Config/Dolphin.ini
@@ -76,10 +76,10 @@ SlotA = 8
 SlotB = 255
 SerialPort1 = 255
 BBA_MAC = 
-SIDevice0 = 6
+SIDevice0 = 0
 AdapterRumble0 = True
 SimulateKonga0 = False
-SIDevice1 = 6
+SIDevice1 = 0
 AdapterRumble1 = True
 SimulateKonga1 = False
 SIDevice2 = 0
@@ -97,7 +97,7 @@ RunCompareClient = False
 EmulationSpeed = 1.00000000
 Overclock = 1.00000000
 OverclockEnable = False
-GFXBackend = 
+GFXBackend = OGL
 GPUDeterminismMode = auto
 PerfMapDir = 
 EnableCustomRTC = False
@@ -120,7 +120,7 @@ Volume = 100
 CaptureLog = False
 WASAPIDevice = default
 [Input]
-BackgroundInput = False
+BackgroundInput = True
 [FifoPlayer]
 LoopReplay = True
 [Analytics]
