--- a/Binary/x64/User/Config/GFX.ini
+++ b/Binary/x64/User/Config/GFX.ini
@@ -16,3 +16,5 @@ HiresTextures = True
 InternalResolution = 1
 SaveTextureCacheToState = True
 DumpTextures = False
+SWDrawEnd = 100000
+SWDrawStart = 0
