--- a/Binary/x64/User/Config/Qt.ini
+++ b/Binary/x64/User/Config/Qt.ini
@@ -33,7 +33,7 @@ geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2 \0\0\x1\x13\0\0\x5\x41\0\0\x
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x97\0\0\x2\x1\0\0\x4\x18\0\0\x3\xfd\0\0\x1\x98\0\0\x2\x1d\0\0\x4\x17\0\0\x3\xfc\0\0\0\0\0\0\0\0\x5\0\0\0\x1\x98\0\0\x2\x1d\0\0\x4\x17\0\0\x3\xfc)
 
 [tableheader]
-state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\n(\x3\0\0\0\x4\0\0\0\x3\0\0\0\x64\0\0\0\x5\0\0\0\x46\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\x3\xf\0\0\0\n\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0&\0\0\0\x84\0\0\0\0\0\0\0\n\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0\x66\0\0\0\x1\0\0\0\x2\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0U\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\0)
+state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\n(\x3\0\0\0\x4\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\x5\0\0\0\x46\0\0\0\x3\0\0\0\x64\0\0\x3\xf\0\0\0\n\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0&\0\0\0\x84\0\0\0\0\0\0\0\n\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0\x66\0\0\0\x1\0\0\0\x2\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0U\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\0)
 
 [gridview]
 scale=@Variant(\0\0\0\x87?\x80\0\0)
