--- a/Binary/x64/User/Config/Dolphin.ini
+++ b/Binary/x64/User/Config/Dolphin.ini
@@ -1,10 +1,10 @@
 [General]
 ShowLag = False
 ShowFrameCount = False
-ISOPaths = 0
+ISOPaths = 1
+ISOPath0 = E:/Emulation/Games/Nintendo GameCube
 RecursiveISOPaths = False
 WirelessMac = 00:17:ab:dd:23:0f
-UseGameCovers = False
 [Interface]
 ConfirmStop = True
 UsePanicHandlers = True
@@ -102,7 +102,6 @@ GPUDeterminismMode = auto
 PerfMapDir = 
 EnableCustomRTC = False
 CustomRTCValue = 0x386d4380
-AutoDiscChange = False
 [Movie]
 PauseMovie = False
 Author = 
@@ -154,16 +153,4 @@ JitPairedOff = False
 JitSystemRegistersOff = False
 JitBranchOff = False
 [NetPlay]
-TraversalChoice = traversal
-Address = 127.0.0.1
-ChunkedUploadLimit = 0x00000bb8
-ConnectPort = 0x0a42
-EnableChunkedUploadLimit = False
-HostPort = 0x0a42
-IndexName = 
-IndexPassword = 
-IndexRegion = 
-Nickname = Player
-UseIndex = False
-UseUPNP = False
-HostCode = 00000000
+TraversalChoice = direct
