--- a/Binary/x64/User/Config/Qt.ini
+++ b/Binary/x64/User/Config/Qt.ini
@@ -1,8 +1,42 @@
-[userstyle]
-path=
-enabled=true
+[netplaydialog]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\b\x1c\0\0\0\xbc\0\0\fT\0\0\x2\x9b\0\0\b\x1c\0\0\0\xbc\0\0\fT\0\0\x2\x9b\0\0\0\x1\0\0\0\0\x5P\0\0\b\x1c\0\0\0\xbc\0\0\fT\0\0\x2\x9b)
+splitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\x9f\0\0\0\xb6\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
+
+[mainwindow]
+state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x1\0\0\0\0\0\0\x1\xec\0\0\x2\x6\xfc\x2\0\0\0\x1\xfc\0\0\0R\0\0\x2\x6\0\0\0\0\0\xff\xff\xff\xfa\xff\xff\xff\xff\x2\0\0\0\b\xfb\0\0\0\x6\0l\0o\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x8d\0\xff\xff\xff\xfb\0\0\0\x12\0l\0o\0g\0\x63\0o\0n\0\x66\0i\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xa7\0\xff\xff\xff\xfb\0\0\0\b\0\x63\0o\0\x64\0\x65\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xef\0\xff\xff\xff\xfb\0\0\0\x12\0r\0\x65\0g\0i\0s\0t\0\x65\0r\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x62\0\xff\xff\xff\xfb\0\0\0\n\0w\0\x61\0t\0\x63\0h\0\0\0\0\0\xff\xff\xff\xff\0\0\0{\0\xff\xff\xff\xfb\0\0\0\x16\0\x62\0r\0\x65\0\x61\0k\0p\0o\0i\0n\0t\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0{\0\xff\xff\xff\xfb\0\0\0\f\0m\0\x65\0m\0o\0r\0y\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x62\0\xff\xff\xff\xfb\0\0\0\x12\0j\0i\0t\0w\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xcb\0\xff\xff\xff\0\0\x3 \0\0\x2\x6\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\xe\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3^\0\0\0\xaa\0\0\x6\x7f\0\0\x3!\0\0\x3_\0\0\0\xc9\0\0\x6~\0\0\x3 \0\0\0\0\0\0\0\0\a\x80\0\0\x3_\0\0\0\xc9\0\0\x6~\0\0\x3 )
+
+[renderwidget]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4&\0\0\0\xf8\0\0\x6\xa7\0\0\x3\x1c\0\0\x4'\0\0\x1\x17\0\0\x6\xa6\0\0\x3\x1b\0\0\0\0\0\0\0\0\a\x80\0\0\x4'\0\0\x1\x17\0\0\x6\xa6\0\0\x3\x1b)
+
+[tableheader]
+state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\n(\x3\0\0\0\x4\0\0\0\t\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x5\0\0\0\x46\0\0\0\b\0\0\0\x64\0\0\x3\xf\0\0\0\n\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0&\0\0\0\x84\0\0\0\0\0\0\0\n\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0\x66\0\0\0\x1\0\0\0\x2\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0U\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\0)
+
+[gridview]
+scale=@Variant(\0\0\0\x87?\x80\0\0)
+
+[jitwidget]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
+floating=false
+tablesplitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0J\0\0\0J\x1\xff\xff\xff\xff\x1\0\0\0\x2\0)
+asmsplitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0J\0\0\0J\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
+
+[logwidget]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
+floating=false
+
+[logging]
+wraplines=false
+font=0
+
+[logconfigwidget]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
+floating=false
 
 [memorywidget]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
+floating=false
+splitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\xff\xff\xff\xff\xff\xff\xff\xff\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
 searchascii=true
 searchhex=false
 addrspace_effective=true
@@ -17,62 +51,24 @@ bpreadwrite=true
 bpread=false
 bpwrite=false
 bplog=true
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
-floating=false
-splitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\xff\xff\xff\xff\xff\xff\xff\xff\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
-
-[netplaydialog]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\x2\x7f\0\0\x1\xf3\0\0\0\0\0\0\0\x14\0\0\x2\x7f\0\0\x1\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\x2\x7f\0\0\x1\xf3)
-splitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\x9f\0\0\0\xb6\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
-
-[mainwindow]
-state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x1\0\0\0\0\0\0\x1\xec\0\0\x2\x6\xfc\x2\0\0\0\x1\xfc\0\0\0R\0\0\x2\x6\0\0\0\0\0\xff\xff\xff\xfa\xff\xff\xff\xff\x2\0\0\0\b\xfb\0\0\0\x6\0l\0o\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x8d\0\xff\xff\xff\xfb\0\0\0\x12\0l\0o\0g\0\x63\0o\0n\0\x66\0i\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xa7\0\xff\xff\xff\xfb\0\0\0\b\0\x63\0o\0\x64\0\x65\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\xef\0\xff\xff\xff\xfb\0\0\0\x12\0r\0\x65\0g\0i\0s\0t\0\x65\0r\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x62\0\xff\xff\xff\xfb\0\0\0\n\0w\0\x61\0t\0\x63\0h\0\0\0\0\0\xff\xff\xff\xff\0\0\0{\0\xff\xff\xff\xfb\0\0\0\x16\0\x62\0r\0\x65\0\x61\0k\0p\0o\0i\0n\0t\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0{\0\xff\xff\xff\xfb\0\0\0\f\0m\0\x65\0m\0o\0r\0y\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x62\0\xff\xff\xff\xfb\0\0\0\x12\0j\0i\0t\0w\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xcb\0\xff\xff\xff\0\0\x3 \0\0\x2\x6\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\xe\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2 \0\0\x1\x13\0\0\x5\x41\0\0\x3\x8a\0\0\x2!\0\0\x1\x32\0\0\x5@\0\0\x3\x89\0\0\0\0\0\0\0\0\a\x80\0\0\x2!\0\0\x1\x32\0\0\x5@\0\0\x3\x89)
-
-[renderwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x97\0\0\x2\x1\0\0\x4\x18\0\0\x3\xfd\0\0\x1\x98\0\0\x2\x1d\0\0\x4\x17\0\0\x3\xfc\0\0\0\0\0\0\0\0\x5\0\0\0\x1\x98\0\0\x2\x1d\0\0\x4\x17\0\0\x3\xfc)
-
-[tableheader]
-state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\n(\x3\0\0\0\x4\0\0\0\x3\0\0\0\x64\0\0\0\x5\0\0\0\x46\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\x3\xf\0\0\0\n\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0&\0\0\0\x84\0\0\0\0\0\0\0\n\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0\x66\0\0\0\x1\0\0\0\x2\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\x4\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0&\0\0\0\x1\0\0\0\x2\0\0\0U\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\0)
-
-[gridview]
-scale=@Variant(\0\0\0\x87?\x80\0\0)
-
-[jitwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
-floating=false
-tablesplitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0J\0\0\0J\x1\xff\xff\xff\xff\x1\0\0\0\x2\0)
-asmsplitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0J\0\0\0J\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
-
-[logwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
-floating=false
-
-[logging]
-wraplines=false
-font=0
-
-[logconfigwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
-floating=false
 
 [registerwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
 floating=false
 
 [watchwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
 floating=false
 
 [breakpointwidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
 floating=false
 
 [codewidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\0\x63\0\0\0\x31)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31\0\0\0\x1\0\0\0\0\x5P\0\0\a\x80\0\0\0\x14\0\0\a\xe3\0\0\0\x31)
 floating=false
 codesplitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\x66\0\0\0J\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
 boxplitter=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x4\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x1\xff\xff\xff\xff\x1\0\0\0\x2\0)
 
-[debugger]
-showcode=true
+[userstyle]
+path=false
