--- a/Binary/x64/User/Config/Dolphin.ini
+++ b/Binary/x64/User/Config/Dolphin.ini
@@ -153,3 +153,15 @@ JitSystemRegistersOff = False
 JitBranchOff = False
 [NetPlay]
 TraversalChoice = direct
+Address = 67.11.25.201
+ChunkedUploadLimit = 0x00000bb8
+ConnectPort = 0x0a42
+EnableChunkedUploadLimit = False
+HostCode = 00000000
+HostPort = 0x0a42
+IndexName = 
+IndexPassword = 
+IndexRegion = 
+Nickname = Player
+UseIndex = False
+UseUPNP = True
