--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Source/Core/Common/scmrev.h
 /[Bb]uild*/
 /[Bb]inary*/
 /obj/
+/cmake-build-debug/
 # Ignore files output by Android cmake build
 /Source/Android/app/.cxx/
 /libs/
