iOS: Add unneeded dependency on mobilesubstrate to force respring after install

--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control-patreon.in
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control-patreon.in
@@ -9,4 +9,5 @@ Maintainer: OatmealDome <julian@oatmealdome.me>
 Author: OatmealDome <julian@oatmealdome.me>
 Sponsor: OatmealDome's Patrons <https://patreon.com/oatmealdome>
 Section: Games
+Depends: mobilesubstrate
 Conflicts: me.oatmealdome.dolphinios
