iOS: Activate AppCenter analytics and crash reporting

--- a/Source/iOS/DolphiniOS/Podfile
+++ b/Source/iOS/DolphiniOS/Podfile
@@ -1,5 +1,12 @@
 platform :ios, '12.0'
 
+plugin 'cocoapods-keys', {
+  :project => "DolphiniOS",
+  :keys => [
+    "AppCenterSecret"
+  ]
+}
+
 target 'DolphiniOS' do
     pod 'AppCenter'
 end
