--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -14,8 +14,6 @@
 	<true/>
 	<key>pad_opacity_value</key>
 	<real>0.5</real>
-	<key>always_show_top_bar</key>
-	<false/>
 	<key>last_game_title</key>
 	<string>Unknown</string>
 	<key>last_game_path</key>
@@ -25,6 +23,8 @@
 	<key>crash_reporting_enabled</key>
 	<true/>
 	<key>software_list_view</key>
+	<integer>0</integer>
+	<key>top_bar_pull_down_mode</key>
 	<integer>0</integer>
 </dict>
 </plist>
