iOS: Log first startup of a new version

--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -24,5 +24,7 @@
 	<true/>
 	<key>top_bar_pull_down_mode</key>
 	<integer>0</integer>
+	<key>last_version</key>
+	<string>dummy</string>
 </dict>
 </plist>
