Add option to show/hide status bar during gameplay
This has been tested in dark and light mode on iOS 13 and does not interfere with the pull-down navigation bar.

--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -39,5 +39,7 @@
 	<string>https://dolphinios.oatmealdome.me/update</string>
 	<key>aprr_jit_on</key>
 	<false/>
+	<key>show_status_bar</key>
+	<false/>
 </dict>
 </plist>
